tests/errors/condition_not_boolean.dash
# Test conditional with non-boolean condition
pub result = if 42 { "number condition" } else { "default" }